maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:12: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
    while (!aBiscuit(x,y)) { // tant qu'on a pas trouv?, parcours en largeur
    ^JediEscaper:16: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
    setIndication(x,y,0) 
    ^JediEscaper:17: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
    return (x,y) // marque sortie + retourne la position de la sortie
    ^JediEscaper:22: error: identifier expected but '(' found.
  def marquerCasesAdjacentes((x,y):Double) {
                             ^JediEscaper:94: error: ':' expected but '}' found.
  } 
  ^